--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@
     <div id="map"></div>
     <div id="layer-control">
         <input type="checkbox" id="toggle-asset-points" checked>
-        <label for="toggle-asset-points">Towers</label><br>
+        <label for="toggle-asset-points">Towers (Source: Central Repo)</label><br>
         <input type="checkbox" id="toggle-roads" checked>
-        <label for="toggle-roads">Low Voltage Network</label><br>
+        <label for="toggle-roads">Low Voltage Network (Source: Central Repo)</label><br>
         <input type="checkbox" id="toggle-high-voltage" checked>
-        <label for="toggle-high-voltage">High Voltage Network</label>
+        <label for="toggle-high-voltage">High Voltage Network (Source: Central Repo)</label><br>
+        <input type="checkbox" id="toggle-traffic-assets" checked>
+        <label for="toggle-traffic-assets">Traffic Assets (Source: Remote API)</label>
     </div>
     <script>
         var map = new maplibregl.Map({
@@ -209,10 +211,63 @@
                     e.target.checked ? 'visible' : 'none'
                 );
             });
+
+            // Fetch traffic data from the API
+            fetch('https://api.data.gov.sg/v1/transport/traffic-images')
+                .then(response => response.json())
+                .then(data => {
+                    // Convert API data to GeoJSON format
+                    const features = data.items[0].cameras.map(camera => ({
+                        type: 'Feature',
+                        geometry: {
+                            type: 'Point',
+                            coordinates: [camera.location.longitude, camera.location.latitude]
+                        },
+                        properties: {
+                            camera_id: camera.camera_id,
+                            image: camera.image,
+                            timestamp: camera.timestamp
+                        }
+                    }));
+
+                    const geojsonData = {
+                        type: 'FeatureCollection',
+                        features: features
+                    };
+
+                    // Add the traffic assets source
+                    map.addSource('traffic-assets', {
+                        type: 'geojson',
+                        data: geojsonData
+                    });
+
+                    // Add the traffic assets layer
+                    map.addLayer({
+                        'id': 'traffic-assets-layer',
+                        'type': 'circle',
+                        'source': 'traffic-assets',
+                        'paint': {
+                            'circle-radius': 5,
+                            'circle-color': '#FF5733'
+                        }
+                    });
+
+                    // Add event listener for traffic assets toggle
+                    document.getElementById('toggle-traffic-assets').addEventListener('change', function(e) {
+                        map.setLayoutProperty(
+                            'traffic-assets-layer',
+                            'visibility',
+                            e.target.checked ? 'visible' : 'none'
+                        );
+                    });
+                })
+                .catch(error => console.error('Error fetching traffic data:', error));
         });
     </script>
 </body>
 </html>
+
+
 
 
 
