added annotation layer mode

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div id="map"></div>
     <div class="layer-control">
         <input type="checkbox" id="toggle-asset-points" checked>
-        <label for="toggle-asset-points">Towers (Source: Central Repo)</label><br>
+        <label for="toggle-asset-points">Substation (Source: Central Repo)</label><br>
         <input type="checkbox" id="toggle-roads" checked>
         <label for="toggle-roads">Low Voltage Network (Source: Central Repo)</label><br>
         <input type="checkbox" id="toggle-high-voltage" checked>
