--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
     <div id="map"></div>
     <div class="layer-control">
         <input type="checkbox" id="toggle-asset-points" checked>
-        <label for="toggle-asset-points">Substation (Source: Central Repo)</label><br>
+        <label for="toggle-asset-points">Substation (Source: central repo)</label><br>
         <input type="checkbox" id="toggle-roads" checked>
-        <label for="toggle-roads">Low Voltage Network (Source: Central Repo)</label><br>
+        <label for="toggle-roads">Low Voltage Network (Source: central repo)</label><br>
         <input type="checkbox" id="toggle-high-voltage" checked>
-        <label for="toggle-high-voltage">High Voltage Network (Source: Central Repo)</label><br>
+        <label for="toggle-high-voltage">High Voltage Network (Source: central repo)</label><br>
         <input type="checkbox" id="toggle-traffic-assets" checked>
-        <label for="toggle-traffic-assets">Traffic Assets (Source: Remote API)</label><br>
+        <label for="toggle-traffic-assets">Traffic Assets (Source: api.data.gov.sg)</label><br>
         <!-- Modern styled button for annotation mode -->
         <button id="annotation-mode">Toggle Annotation Mode</button>
 
