Made traffic asset layer clickable

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                             // Create a popup and set its content
                             new maplibregl.Popup()
                                 .setLngLat(coordinates)
-                                .setHTML('<strong>Property:</strong> ' + properties.name)
+                                .setHTML('<strong>Property:</strong> ' + properties.Name)
                                 .addTo(map);
                         });
 
