--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
@@ -15,11 +16,13 @@
             font-family: 'Roboto', sans-serif;
             background-color: #f4f4f9;
         }
+
         #map {
             width: 100vw;
             height: 100vh;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
+
         .layer-control {
             position: absolute;
             top: 20px;
@@ -31,17 +34,22 @@
             z-index: 1;
             transition: all 0.3s ease;
         }
+
         .layer-control:hover {
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
+
         .layer-control input {
             margin-right: 8px;
         }
+
         .layer-control label {
             font-weight: 500;
             color: #333;
         }
-        #annotation-mode, #clear-annotations {
+
+        #annotation-mode,
+        #clear-annotations {
             display: inline-block;
             margin-top: 10px;
             padding: 10px 20px;
@@ -54,12 +62,16 @@
             cursor: pointer;
             transition: background-color 0.3s ease;
         }
-        #annotation-mode:hover, #clear-annotations:hover {
+
+        #annotation-mode:hover,
+        #clear-annotations:hover {
             background-color: #0056b3;
         }
-
     </style>
+    <!-- Include the external JavaScript file -->
+    <script src="map.js"></script>
 </head>
+
 <body>
     <div id="map"></div>
     <div class="layer-control">
@@ -73,313 +85,7 @@
         <label for="toggle-traffic-assets">Traffic Assets (Source: api.data.gov.sg)</label><br>
         <!-- Modern styled button for annotation mode -->
         <button id="annotation-mode">Toggle Annotation Mode</button>
-
     </div>
-    <script>
-        var map = new maplibregl.Map({
-            container: 'map',
-            style: {
-                "version": 8,
-                "sources": {
-                    "osm-tiles": {
-                        "type": "raster",
-                        "tiles": [
-                            "https://a.tile.openstreetmap.org/{z}/{x}/{y}.png",
-                            "https://b.tile.openstreetmap.org/{z}/{x}/{y}.png",
-                            "https://c.tile.openstreetmap.org/{z}/{x}/{y}.png"
-                        ],
-                        "tileSize": 256
-                    }
-                },
-                "layers": [{
-                    "id": "osm-tiles",
-                    "type": "raster",
-                    "source": "osm-tiles",
-                    "minzoom": 0,
-                    "maxzoom": 19
-                }]
-            },
-            center: [103.8198, 1.3421],
-            zoom: 13
-        });
-
-        var annotationMode = false;
-        var annotations = [];
-
-        document.getElementById('annotation-mode').addEventListener('click', function() {
-            annotationMode = !annotationMode;
-            this.textContent = annotationMode ? 'Exit Annotation Mode' : 'Toggle Annotation Mode';
-        });
-
-        map.on('click', function(e) {
-            if (annotationMode) {
-                var coordinates = [e.lngLat.lng, e.lngLat.lat];
-                var marker = new maplibregl.Marker()
-                    .setLngLat(coordinates)
-                    .addTo(map);
-
-                annotations.push(coordinates);
-                console.log('Annotation added at:', coordinates);
-            }
-        });
-        map.on('load', function () {
-
-            map.addSource('places', {
-                type: 'geojson',
-                data: 'data.geojson'
-            });
-
-            map.addLayer({
-                'id': 'places-layer',
-                'type': 'circle',
-                'source': 'places',
-                'paint': {
-                    'circle-radius': 6,
-                    'circle-color': '#007cbf'
-                }
-            });
-
-            map.addSource('sg-roads', {
-                type: 'geojson',
-                data: 'https://raw.githubusercontent.com/stephan-parra/sample-sg-road-data/main/SG_Roads.geojson'
-            });
-
-            map.addLayer({
-                'id': 'sg-roads-layer',
-                'type': 'line',
-                'source': 'sg-roads',
-                'layout': {
-                    'line-join': 'round',
-                    'line-cap': 'round'
-                },
-                'paint': {
-                    'line-color': '#ff0000',
-                    'line-width': 2
-                }
-            });
-
-            map.addSource('asset-points', {
-                type: 'geojson',
-                data: 'https://raw.githubusercontent.com/stephan-parra/sample-sg-road-data/main/AssetPoints1.geojson'
-            });
-
-            map.addLayer({
-                'id': 'asset-points-layer',
-                'type': 'circle',
-                'source': 'asset-points',
-                'paint': {
-                    'circle-radius': 7,
-                    'circle-color': '#4411ED'
-                },
-                'layout': {
-                    'visibility': 'visible'
-                }
-            });
-
-            map.addSource('asset-line-network', {
-                type: 'geojson',
-                data: 'https://raw.githubusercontent.com/stephan-parra/sample-sg-road-data/main/AssetLineNetwork2.geojson'
-            });
-
-            map.addLayer({
-                'id': 'asset-line-network-layer',
-                'type': 'line',
-                'source': 'asset-line-network',
-                'layout': {
-                    'line-join': 'round',
-                    'line-cap': 'round'
-                },
-                'paint': {
-                    'line-color': '#CC02F5',
-                    'line-width': 2
-                }
-            });
-
-            map.addSource('worksite', {
-                type: 'geojson',
-                data: 'https://raw.githubusercontent.com/stephan-parra/sample-sg-road-data/main/Worksite.geojson'
-            });
-
-            map.addLayer({
-                'id': 'worksite-border-layer',
-                'type': 'line',
-                'source': 'worksite',
-                'paint': {
-                    'line-color': '#4a4a4a',
-                    'line-width': 2
-                }
-            });
-
-            map.on('sourcedata', function(e) {
-                if (e.sourceId === 'worksite' && e.isSourceLoaded) {
-                    var worksiteData = map.getSource('worksite')._data;
-                    var assetPointsData = map.getSource('asset-points')._data;
-
-                    // Ensure worksiteData is a valid polygon
-                    if (worksiteData.features.length > 0 && worksiteData.features[0].geometry.type === 'Polygon') {
-                        var filteredFeatures = assetPointsData.features.filter(function(feature) {
-                            return turf.booleanPointInPolygon(feature, worksiteData.features[0]);
-                        });
-                        map.getSource('asset-points').setData({
-                            type: 'FeatureCollection',
-                            features: filteredFeatures
-                        });
-                    }
-                }
-            });
-
-            document.getElementById('toggle-roads').addEventListener('change', function(e) {
-                map.setLayoutProperty(
-                    'sg-roads-layer',
-                    'visibility',
-                    e.target.checked ? 'visible' : 'none'
-                );
-            });
-
-            document.getElementById('toggle-asset-points').addEventListener('change', function(e) {
-                map.setLayoutProperty(
-                    'asset-points-layer',
-                    'visibility',
-                    e.target.checked ? 'visible' : 'none'
-                );
-            });
-
-            document.getElementById('toggle-high-voltage').addEventListener('change', function(e) {
-                map.setLayoutProperty(
-                    'asset-line-network-layer',
-                    'visibility',
-                    e.target.checked ? 'visible' : 'none'
-                );
-            });
-
-                        // Fetch traffic data from the API
-                        fetch('https://api.data.gov.sg/v1/transport/traffic-images')
-                            .then(response => response.json())
-                            .then(data => {
-                                // Convert API data to GeoJSON format
-                                const features = data.items[0].cameras.map(camera => ({
-                                    type: 'Feature',
-                                    geometry: {
-                                        type: 'Point',
-                                        coordinates: [camera.location.longitude, camera.location.latitude]
-                                    },
-                                    properties: {
-                                        camera_id: camera.camera_id,
-                                        image: camera.image,
-                                        timestamp: camera.timestamp
-                                    }
-                                }));
-
-                                const geojsonData = {
-                                    type: 'FeatureCollection',
-                                    features: features
-                                };
-
-                                // Add the traffic assets source
-                                map.addSource('traffic-assets', {
-                                    type: 'geojson',
-                                    data: geojsonData
-                                });
-
-                                // Add the traffic assets layer
-                                map.addLayer({
-                                    'id': 'traffic-assets-layer',
-                                    'type': 'circle',
-                                    'source': 'traffic-assets',
-                                    'paint': {
-                                        'circle-radius': 6,
-                                        'circle-color': '#FF5733'
-                                    }
-                                });
-
-                                // Add event listener for traffic assets toggle
-                                document.getElementById('toggle-traffic-assets').addEventListener('change', function(e) {
-                                    map.setLayoutProperty(
-                                        'traffic-assets-layer',
-                                        'visibility',
-                                        e.target.checked ? 'visible' : 'none'
-                                    );
-                                });
-
-                                // Add click event for Traffic Assets layer
-                                map.on('click', 'traffic-assets-layer', function (e) {
-                                    var coordinates = e.lngLat;
-                                    var properties = e.features[0].properties;
-
-                                    // Create a popup and set its content with modern styling
-                                    new maplibregl.Popup({ maxWidth: '450px' })
-                                        .setLngLat(coordinates)
-                                        .setHTML(
-                                            '<div style="font-family: Arial, sans-serif; font-size: 14px; color: #333; padding: 10px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);">' +
-                                            '<table style="width: 100%; border-collapse: collapse; border: 1px solid #ddd;">' +
-                                            '<tr><td style="font-size: 14px; color: #333; font-weight: normal; border: 1px solid #ddd; padding: 8px;">Camera ID:</td><td style="border: 1px solid #ddd; padding: 8px;">' + properties.camera_id + '</td></tr>' +
-                                            '<tr><td style="font-size: 14px; color: #333; font-weight: normal; border: 1px solid #ddd; padding: 8px;">Image:</td><td style="border: 1px solid #ddd; padding: 8px;"><img src="' + properties.image + '" alt="Camera Image" style="width:100px;height:auto;display:block;margin-top:5px;margin-bottom:5px;border-radius:4px;"></td></tr>' +
-                                            '<tr><td style="font-size: 14px; color: #333; font-weight: normal; border: 1px solid #ddd; padding: 8px;">Timestamp:</td><td style="border: 1px solid #ddd; padding: 8px;">' + properties.timestamp + '</td></tr>' +
-                                            '</table>' +
-                                            '</div>'
-                                        )
-                                        .addTo(map);
-
-                                });
-
-
-                                // Change the cursor to a pointer when the mouse is over the Traffic Assets layer
-                                map.on('mouseenter', 'traffic-assets-layer', function () {
-                                    map.getCanvas().style.cursor = 'pointer';
-                                });
-
-                                // Change it back to default when it leaves
-                                map.on('mouseleave', 'traffic-assets-layer', function () {
-                                    map.getCanvas().style.cursor = '';
-                                });
-                            })
-                            .catch(error => console.error('Error fetching traffic data:', error));
-
-                        // Add click event for Low Voltage Network layer
-                        map.on('click', 'sg-roads-layer', function (e) {
-                            var coordinates = e.lngLat;
-                            var properties = e.features[0].properties;
-
-                            // Create a popup and set its content
-                            new maplibregl.Popup()
-                                .setLngLat(coordinates)
-                                .setHTML('<strong>Property:</strong> ' + properties.Name)
-                                .addTo(map);
-                        });
-
-                        // Change the cursor to a pointer when the mouse is over the Low Voltage Network layer
-                        map.on('mouseenter', 'sg-roads-layer', function () {
-                            map.getCanvas().style.cursor = 'pointer';
-                        });
-
-                        // Change it back to a pointer when it leaves
-                        map.on('mouseleave', 'sg-roads-layer', function () {
-                            map.getCanvas().style.cursor = '';
-                        });
-                    });
-                </script>
-            </body>
-            </html>
-        });
-    </script>
 </body>
+
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
