Added draw polygon function, 2nd release

--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
         <label for="toggle-high-voltage">High Voltage Network (Source: central repo)</label><br>
         <input type="checkbox" id="toggle-traffic-assets" checked>
         <label for="toggle-traffic-assets">Traffic Assets (Source: api.data.gov.sg)</label><br>
-        <!-- Modern styled button for annotation mode -->
-        <button id="annotation-mode">Toggle Annotation Mode</button>
-        <button id="draw-polygon">Draw Polygon</button>
+
+        <button id="draw-polygon">Select Features from LV Network</button>
     </div>
 </body>
 
