Added draw polygon function, Final release

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
         <input type="checkbox" id="toggle-traffic-assets" checked>
         <label for="toggle-traffic-assets">Traffic Assets (Source: api.data.gov.sg)</label><br>
 
-        <button id="draw-polygon">Select Features from LV Network</button>
+        <button id="draw-polygon">Select and Download LV Network</button>
+        <button id="reset-map">Reset Map</button>
     </div>
+    <div id="draw-instructions" class="map-instructions">Click to draw a polygon, double-click to finish</div>
 </body>
 
 </html>
